adjusted contact section header margin

--- a/css/styles.css
+++ b/css/styles.css
@@ -157,7 +157,7 @@ img:hover {
 .contact-section-header {
     text-shadow: 5px 8px 8px #000;
     max-width: 640px;
-    margin: 2rem auto 1rem;
+    margin: 1.5rem;
     border-bottom: 0.2rem solid #E71D36;
     ;
 }
