--- a/css/styles.css
+++ b/css/styles.css
@@ -17,8 +17,9 @@ html {
     top: 0;
     left: 0;
     width: 100%;
-    background: #E71D36;
-    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.9);
+    background: url("https://cdn.pixabay.com/photo/2017/08/30/12/23/black-2696879_960_720.jpg");
+    box-shadow: 0 6px 4px rgba(0, 0, 0, 0.9);
+    z-index: 1;
 }
 
 .nav-list {
@@ -27,21 +28,23 @@ html {
 }
 
 .nav-list a {
-    text-shadow: 4px 7px 5px #011627;
+    color: #fff;
+    text-shadow: 5px 5px 5px #000;
     display: block;
     font-size: 2rem;
     padding: 1rem;
 }
 
 .nav-list a:hover {
-    color: #011627;
+    color: #ff0;
+    text-shadow: 0px 0px 2px #000;
     /*
   font-size: 99%;
   */
 }
 
 #main-heading {
-    text-shadow: 5px 8px 8px #011627;
+    text-shadow: 5px 8px 8px #000;
 }
 
 .welcome-section {
@@ -51,13 +54,13 @@ html {
     text-align: center;
     width: 100%;
     height: 100vh;
-    background: linear-gradient(20deg, #011627 5%, #2EC4B6 100%);
+    background: linear-gradient(20deg, #000 5%, #D6CECB 100%);
 }
 
 .welcome-section > p {
-    color: black;
-    font-size: 2rem;
-    text-shadow: 0 0 2px #fff;
+    color: #000;
+    font-size: 2.2rem;
+    text-shadow: 0 0 3px #fff;
 }
 
 body {
@@ -74,7 +77,7 @@ h2 {
 }
 
 h1 {
-    font-size: 6rem;
+    font-size: 6.75rem;
     color: white;
 }
 
@@ -108,11 +111,12 @@ img:hover {
 .projects-section {
     text-align: center;
     padding: 10rem 2rem;
-    background: #2EC4B6;
+    background: #D6CECB;
+    overflow: hidden;
 }
 
 .projects-section-header {
-    text-shadow: 4px 7px 12px #E71D36;
+    text-shadow: 4px 7px 12px #000;
     max-width: 280px;
     margin: 0 auto 6rem auto;
     border-bottom: 0.2rem solid black;
@@ -126,9 +130,6 @@ img:hover {
     max-width: 1280px;
     margin: 0 auto;
     margin-bottom: 2rem;
-}
-
-.projects-grid {
     grid: auto-flow;
 }
 
@@ -139,7 +140,7 @@ img:hover {
 }
 
 .project-title:hover {
-    color: #E71D36;
+    color: #ff1b02;
     text-shadow: 0 0 5px #fff;
 }
 
@@ -150,15 +151,16 @@ img:hover {
     justify-content: center;
     align-items: center;
     width: 100%;
-    background: #011627;
-    color: #E71D36;
+    background: url("https://cdn.pixabay.com/photo/2017/08/30/12/23/black-2696879_960_720.jpg");
+    box-shadow: 0 -6px 4px rgba(0, 0, 0, 0.9);
 }
 
 .contact-section-header {
-    text-shadow: 5px 8px 8px #000;
+    color: #fff;
+    text-shadow: 5px 5px 4px #000;
     max-width: 640px;
     margin: 1.5rem;
-    border-bottom: 0.2rem solid #E71D36;
+    border-bottom: 0.2rem solid #fff;
     ;
 }
 
@@ -169,10 +171,10 @@ img:hover {
 
 .contact-links a {
     font-size: 2rem;
-    color: #E71D36;
+    color: #fff;
     padding: 0 1rem;
     margin: 2rem;
-    text-shadow: 0 0 1px #000;
+    text-shadow: 5px 5px 5px #000;
 }
 
 .fa {
@@ -180,6 +182,6 @@ img:hover {
 }
 
 .contact-details:hover {
-    color: #2EC4B6;
-    text-shadow: 0 0 1px #000;
+    color: #ff0;
+    text-shadow: 5px 5px 5px #000;
 }
