--- a/css/styles.css
+++ b/css/styles.css
@@ -135,12 +135,37 @@ img:hover {
 
 .project-title {
     color: black;
-    padding-top: 10px;
+    padding-top: 5px;
     text-shadow: 0 0 5px #fff;
 }
 
-.project-title:hover {
-    color: #ff1b02;
+#project-title-1:hover {
+    color: #de1e24;
+    text-shadow: 0 0 5px #fff;
+}
+
+#project-title-2:hover {
+    color: #41B49D;
+    text-shadow: 0 0 5px #fff;
+}
+
+#project-title-3:hover {
+    color: rgba(255, 255, 255, .75);
+    text-shadow: 0 0 5px #000;
+}
+
+#project-title-4:hover {
+    color: #fdff67;
+    text-shadow: 0 0 5px #000;
+}
+
+#project-title-5:hover {
+    color: #fff;
+    text-shadow: 0 0 5px #000;
+}
+
+#project-title-6:hover {
+    color: #b45ccc;
     text-shadow: 0 0 5px #fff;
 }
 
