--- a/css/styles.css
+++ b/css/styles.css
@@ -113,11 +113,12 @@ img:hover {
     padding: 10rem 2rem;
     background: #D6CECB;
     overflow: hidden;
+    width: 100%;
 }
 
 .projects-section-header {
     text-shadow: 4px 7px 12px #000;
-    max-width: 280px;
+    max-width: 240px;
     margin: 0 auto 6rem auto;
     border-bottom: 0.2rem solid black;
 }
@@ -139,34 +140,9 @@ img:hover {
     text-shadow: 0 0 5px #fff;
 }
 
-#project-title-1:hover {
-    color: #de1e24;
-    text-shadow: 0 0 5px #fff;
-}
-
-#project-title-2:hover {
-    color: #41B49D;
-    text-shadow: 0 0 5px #fff;
-}
-
-#project-title-3:hover {
-    color: rgba(255, 255, 255, .75);
-    text-shadow: 0 0 5px #000;
-}
-
-#project-title-4:hover {
-    color: #fdff67;
-    text-shadow: 0 0 5px #000;
-}
-
-#project-title-5:hover {
+.project-title:hover {
     color: #fff;
     text-shadow: 0 0 5px #000;
-}
-
-#project-title-6:hover {
-    color: #b45ccc;
-    text-shadow: 0 0 5px #fff;
 }
 
 .contact-section {
